--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
  python:
     - "3.5"
  install:
+  - sudo rm -f /etc/boto.cfg
   - pip install -r requirements.txt
  script:
     - python3 model.py
