--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
+ export BOTO_CONFIG=/dev/null
  language: python
  python:
     - "3.5"
  install:
-  - sudo rm -f /etc/boto.cfg
   - pip install -r requirements.txt
  script:
     - python3 model.py
