This is a combination of 31 commits.
Convert script to OOP format, with rebase #14

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,9 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+# .idea and models
+.idea/
+classifiers/*.model
+classifiers/*.model.*
+classifiers/*.pkl
+data/*.csv
