--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@
  install:
   - sudo rm -f /etc/boto.cfg
   - pip install -r requirements.txt
- script:
-    - python3 model.py
+# script:
+#   - python3 model_builder.py
