--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@
   - sudo rm -f /etc/boto.cfg
   - pip install -r requirements.txt
  script:
-   - python3 text_classifier.py Test dataset.csv d2v.model joblib_model.pkl
+   - python3 text_classifier.py
