Convert script to OOP format (#19)
Convert script to OOP format.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@
   - sudo rm -f /etc/boto.cfg
   - pip install -r requirements.txt
  script:
-    - python3 model.py
+   - python3 text_classifier.py
